force-app/main/default/objects/Indent_Line__c/Indent_Line__c.object-meta.xml
<CustomObject>
    <label>Indent Line</label>
    <pluralLabel>Indent Lines</pluralLabel>
    <nameField>
        <label>Indent Line Number</label>
        <displayFormat>IDL-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Line items for distributor indents containing product, quantity, and pricing details</description>
</CustomObject>