force-app/main/default/objects/Indent_Line__c/fields/Approved_Qty__c.field-meta.xml
<CustomField>
    <fullName>Approved_Qty__c</fullName>
    <label>Approved Qty</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>