force-app/main/default/objects/Indent_Line__c/fields/Indent__c.field-meta.xml
<CustomField>
    <fullName>Indent__c</fullName>
    <label>Indent</label>
    <type>MasterDetail</type>
    <referenceTo>Indent__c</referenceTo>
    <relationshipLabel>Indent Lines</relationshipLabel>
    <relationshipName>Indent_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>